--- a/Makefile.win
+++ b/Makefile.win
@@ -22,5 +22,15 @@ clean:
 	if exist build rmdir /s /q build
 	if exist libvscode_diff.dll del /q libvscode_diff.dll
 
+bump-patch:
+	node scripts/bump_version.mjs patch
+
+bump-minor:
+	node scripts/bump_version.mjs minor
+
+bump-major:
+	node scripts/bump_version.mjs major
+
 help:
 	@echo Targets: build, test, test-c, test-lua, clean, help
+	@echo Version: bump-patch, bump-minor, bump-major
