feat: Run regression check and build-test in parallel
Both jobs now run simultaneously:
- regression-check: Validates no diff algorithm regressions
- build-and-test: Runs full test suite on all platforms

Behavior:
✅ Both run in parallel (faster CI)
❌ If regression-check fails → entire workflow fails immediately
❌ If build-and-test fails → entire workflow fails
✅ Both must pass for PR to be mergeable

GitHub Actions automatically marks the workflow as failed if
any job fails, and branch protection will block merge.

This provides fast feedback - developers see regression failures
within ~2 minutes instead of waiting for the full 10+ minute
build-and-test cycle.

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -11,8 +11,12 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build-and-test:
-    uses: ./.github/workflows/build-and-test.yml
-  
+  # Regression check runs in parallel with build-and-test
+  # If this fails, the entire PR workflow is marked as failed
   regression-check:
     uses: ./.github/workflows/regression-check.yml
+  
+  # Build and test also runs in parallel
+  # Both jobs must pass for PR to be mergeable
+  build-and-test:
+    uses: ./.github/workflows/build-and-test.yml
