--- a/.github/workflows/copilot-setup-steps.yml
+++ b/.github/workflows/copilot-setup-steps.yml
@@ -36,11 +36,8 @@ jobs:
       - name: Setup Neovim
         uses: ./.github/actions/setup-neovim
 
-      - name: Install plugin dependencies (plenary.nvim, nui.nvim)
-        run: |
-          mkdir -p ~/.local/share/nvim/site/pack/vendor/start
-          git clone --depth 1 https://github.com/nvim-lua/plenary.nvim ~/.local/share/nvim/site/pack/vendor/start/plenary.nvim
-          git clone --depth 1 https://github.com/MunifTanjim/nui.nvim ~/.local/share/nvim/site/pack/vendor/start/nui.nvim
+      # Note: plenary.nvim and nui.nvim are installed on-demand by tests/init.lua
+      # This keeps behavior consistent with the main CI pipeline
 
       - name: Build native library
         run: make build
